# bmv-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RasPi.cmake  build.sh
dbus/: bmvmonitor.xml
include/: CacheObject.h  DeviceCache.h  Dictionary.h  LineParser.h  SerialPortCommunicator.h  bmvmonitor.h
src/: DeviceCache.cpp  LineParser.cpp  SerialPortCommunicator.cpp  main.cpp
